--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<title>Sedona | Portfolio</title>
+	<title>Royenix | Portfolio</title>
 
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
@@ -45,11 +46,13 @@
 						<div class="nav__header">
 							<!-- Logo -->
 							<a href="index.html" class="logo-container flex-child">
-								<img class="logo" src="img/logo.png" srcset="img/logo.png 1x, img/logo@2x.png 2x" alt="logo">
+								<img class="logo" src="img/logo.png" srcset="img/logo.png 1x, img/logo@2x.png 2x"
+									alt="logo">
 							</a>
 
 							<!-- Mobile toggle -->
-							<button type="button" class="nav__icon-toggle" id="nav__icon-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+							<button type="button" class="nav__icon-toggle" id="nav__icon-toggle" data-toggle="collapse"
+								data-target="#navbar-collapse">
 								<span class="sr-only">Toggle navigation</span>
 								<span class="nav__icon-toggle-bar"></span>
 								<span class="nav__icon-toggle-bar"></span>
@@ -59,7 +62,7 @@
 
 						<!-- Navbar -->
 						<nav id="navbar-collapse" class="nav__wrap collapse navbar-collapse">
-							<ul class="nav__menu">
+							<!-- <ul class="nav__menu">
 								<li class="nav__dropdown active">
 									<a href="index.html" aria-haspopup="true">Home</a>
 									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
@@ -106,7 +109,30 @@
 										<li><a href="single-post.html">Single Post</a></li>
 									</ul>
 								</li>
-							</ul> <!-- end menu -->
+							</ul> -->
+							<ul class="nav__menu">
+								<li>
+									<a href="index.html" aria-haspopup="true">Home</a>
+								</li>
+								<li>
+									<a href="./about.html" aria-haspopup="true">About Us</a>
+								</li>
+								<li class="nav__dropdown active">
+									<a href="#" aria-haspopup="true">Services</a>
+									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
+										aria-expanded="false"></i>
+									<ul class="nav__dropdown-menu">
+										<li><a href="./portfolio.html">Portfolio</a></li>
+										<li><a href="./services.html">Services</a></li>
+										<li><a href="./single-service.html">Single Service</a></li>
+
+									</ul>
+								</li>
+								<li>
+									<a href="./contact.html" aria-haspopup="true">Contact Us</a>
+								</li>
+							</ul>
+							<!-- end menu -->
 							<div class="nav__phone nav__phone--mobile d-lg-none">
 								<span class="nav__phone-text">Call us:</span>
 								<a href="tel:1-800-995-3959" class="nav__phone-number">1-800-995-3959</a>
@@ -114,10 +140,14 @@
 
 							<div class="nav__socials nav__socials--mobile d-lg-none">
 								<div class="socials">
-									<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
-									<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-									<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-									<a href="#" class="social social-instagram" aria-label="instagram" title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+									<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
+										target="_blank"><i class="ui-twitter"></i></a>
+									<a href="#" class="social social-facebook" aria-label="facebook" title="facebook"
+										target="_blank"><i class="ui-facebook"></i></a>
+									<a href="#" class="social social-youtube" aria-label="youtube" title="google plus"
+										target="_blank"><i class="ui-youtube"></i></a>
+									<a href="#" class="social social-instagram" aria-label="instagram" title="instagram"
+										target="_blank"><i class="ui-instagram"></i></a>
 								</div>
 							</div>
 						</nav> <!-- end nav-wrap -->
@@ -129,10 +159,14 @@
 
 						<div class="nav__socials d-none d-lg-block">
 							<div class="socials">
-								<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
-								<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-								<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-								<a href="#" class="social social-instagram" aria-label="instagram" title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+								<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
+									target="_blank"><i class="ui-twitter"></i></a>
+								<a href="#" class="social social-facebook" aria-label="facebook" title="facebook"
+									target="_blank"><i class="ui-facebook"></i></a>
+								<a href="#" class="social social-youtube" aria-label="youtube" title="google plus"
+									target="_blank"><i class="ui-youtube"></i></a>
+								<a href="#" class="social social-instagram" aria-label="instagram" title="instagram"
+									target="_blank"><i class="ui-instagram"></i></a>
 							</div>
 						</div>
 
@@ -146,7 +180,8 @@
 		<div class="content-wrapper content-wrapper--boxed oh">
 
 			<!-- Page Title -->
-			<section class="page-title bg-dark-overlay text-center" style="background-image: url(img/page-title/portfolio.jpg);">
+			<section class="page-title bg-dark-overlay text-center"
+				style="background-image: url(img/page-title/portfolio.jpg);">
 				<div class="container">
 					<div class="page-title__holder">
 						<h1 class="page-title__title">Portfolio</h1>
@@ -158,7 +193,7 @@
 			<!-- Portfolio -->
 			<section class="section-wrap">
 				<div class="container">
-					
+
 					<div class="projects">
 						<div class="project-1">
 							<div class="project-1__container">
@@ -172,8 +207,9 @@
 							<div class="project-1__description-holder">
 								<div class="project-1__description">
 									<h3 class="project-1__title">Keangnam Grand Hall</h3>
-									<p class="project-1__text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-									voluptatem sequi nesciunt.</p>
+									<p class="project-1__text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur
+										aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+										voluptatem sequi nesciunt.</p>
 									<a href="#" class="read-more">
 										<span class="read-more__text">Read More</span>
 										<i class="ui-arrow-right read-more__icon"></i>
@@ -194,8 +230,9 @@
 							<div class="project-1__description-holder">
 								<div class="project-1__description">
 									<h3 class="project-1__title">Green House</h3>
-									<p class="project-1__text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-									voluptatem sequi nesciunt.</p>
+									<p class="project-1__text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur
+										aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+										voluptatem sequi nesciunt.</p>
 									<a href="#" class="read-more">
 										<span class="read-more__text">Read More</span>
 										<i class="ui-arrow-right read-more__icon"></i>
@@ -216,8 +253,9 @@
 							<div class="project-1__description-holder">
 								<div class="project-1__description">
 									<h3 class="project-1__title">Contemporary Villa</h3>
-									<p class="project-1__text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-									voluptatem sequi nesciunt.</p>
+									<p class="project-1__text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur
+										aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+										voluptatem sequi nesciunt.</p>
 									<a href="#" class="read-more">
 										<span class="read-more__text">Read More</span>
 										<i class="ui-arrow-right read-more__icon"></i>
@@ -225,11 +263,11 @@
 								</div>
 							</div>
 						</div> <!-- end project -->
-					</div>	
-					
+					</div>
+
 				</div>
 			</section> <!-- end portfolio -->
-			
+
 
 			<!-- Footer -->
 			<footer class="footer bg-dark-overlay" style="background-image: url(img/footer/1.jpg);">
@@ -241,7 +279,8 @@
 								<div class="widget widget-about-us">
 									<!-- Logo -->
 									<a href="index.html" class="logo-container flex-child">
-										<img class="logo" src="img/logo_white.png" srcset="img/logo_white.png 1x, img/logo_white@2x.png 2x" alt="logo">
+										<img class="logo" src="img/logo_white.png"
+											srcset="img/logo_white.png 1x, img/logo_white@2x.png 2x" alt="logo">
 									</a>
 								</div>
 							</div> <!-- end logo -->
@@ -270,10 +309,14 @@
 							<div class="col-lg-3 offset-lg-2 col-md-3">
 								<div class="widget">
 									<div class="socials">
-										<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
-										<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-										<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-										<a href="#" class="social social-instagram" aria-label="instagram" title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+										<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
+											target="_blank"><i class="ui-twitter"></i></a>
+										<a href="#" class="social social-facebook" aria-label="facebook"
+											title="facebook" target="_blank"><i class="ui-facebook"></i></a>
+										<a href="#" class="social social-youtube" aria-label="youtube"
+											title="google plus" target="_blank"><i class="ui-youtube"></i></a>
+										<a href="#" class="social social-instagram" aria-label="instagram"
+											title="instagram" target="_blank"><i class="ui-instagram"></i></a>
 									</div>
 								</div>
 							</div>
@@ -285,7 +328,7 @@
 				<div class="footer__bottom">
 					<div class="container-fluid text-right text-md-center">
 						<span class="copyright">
-							&copy; 2018 Sedona, Made by <a href="https://deothemes.com">DeoThemes</a>
+							© 2022 Royenix, Made by <a href="https://thedigibase.com">DigiBase</a>
 						</span>
 					</div>
 				</div> <!-- end footer bottom -->
@@ -306,4 +349,5 @@
 	<script src="js/scripts.js"></script>
 
 </body>
+
 </html>
