--- a/services.html
+++ b/services.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<title>Sedona | Services</title>
+	<title>Royenix | Services</title>
 
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
@@ -45,11 +46,13 @@
 						<div class="nav__header">
 							<!-- Logo -->
 							<a href="index.html" class="logo-container flex-child">
-								<img class="logo" src="img/logo.png" srcset="img/logo.png 1x, img/logo@2x.png 2x" alt="logo">
+								<img class="logo" src="img/logo.png" srcset="img/logo.png 1x, img/logo@2x.png 2x"
+									alt="logo">
 							</a>
 
 							<!-- Mobile toggle -->
-							<button type="button" class="nav__icon-toggle" id="nav__icon-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+							<button type="button" class="nav__icon-toggle" id="nav__icon-toggle" data-toggle="collapse"
+								data-target="#navbar-collapse">
 								<span class="sr-only">Toggle navigation</span>
 								<span class="nav__icon-toggle-bar"></span>
 								<span class="nav__icon-toggle-bar"></span>
@@ -60,59 +63,28 @@
 						<!-- Navbar -->
 						<nav id="navbar-collapse" class="nav__wrap collapse navbar-collapse">
 							<ul class="nav__menu">
-								<li class="nav__dropdown active">
+								<li>
 									<a href="index.html" aria-haspopup="true">Home</a>
-									<!-- <i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
-									<ul class="nav__dropdown-menu">
-										<li><a href="index.html">Home 1</a></li>
-										<li><a href="index-2.html">Home 2</a></li>
-										<li><a href="index-3.html">Home 3</a></li>
-										<li><a href="index-4.html">Home 4</a></li>
-									</ul> -->
 								</li>
-								<li class="nav__dropdown">
+								<li>
 									<a href="./about.html" aria-haspopup="true">About Us</a>
-									<!-- <i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
-									<ul class="nav__dropdown-menu">
-										<li><a href="about.html">About</a></li>
-										<li><a href="services.html">Services</a></li>
-										<li><a href="single-service.html">Single Service</a></li>
-										<li><a href="contact.html">Contact</a></li>
-									</ul> -->
 								</li>
-								<li class="nav__dropdown">
-									<a href="#" aria-haspopup="true">Portfolio</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
+								<li class="nav__dropdown active">
+									<a href="#" aria-haspopup="true">Services</a>
+									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
+										aria-expanded="false"></i>
 									<ul class="nav__dropdown-menu">
-										<!-- <li><a href="about.html">About</a></li> -->
-										<li><a href="#">Services</a></li>
-										<li><a href="single-service.html">Single Service</a></li>
-										<!-- <li><a href="contact.html">Contact</a></li> -->
+										<li><a href="./portfolio.html">Portfolio</a></li>
+										<li><a href="./services.html">Services</a></li>
+										<li><a href="./single-service.html">Single Service</a></li>
+
 									</ul>
-									<!-- <ul class="nav__dropdown-menu">
-										<li><a href="portfolio.html">Portfolio</a></li>
-										<li><a href="portfolio-gallery.html">Portfolio Gallery</a></li>
-										<li><a href="portfolio-single.html">Portfolio Single</a></li>
-									</ul> -->
 								</li>
-								<!-- <li class="nav__dropdown">
-									<a href="#" aria-haspopup="true">Features</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
-									<ul class="nav__dropdown-menu">
-										<li><a href="icons.html">Icons</a></li>
-										<li><a href="elements.html">Elements</a></li>
-									</ul>
-								</li> -->
-								<li class="nav__dropdown">
+								<li>
 									<a href="./contact.html" aria-haspopup="true">Contact Us</a>
-									<!-- <i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
-									<ul class="nav__dropdown-menu">
-										<li><a href="blog-masonry.html">Blog Masonry</a></li>
-										<li><a href="blog.html">Blog Standard</a></li>
-										<li><a href="single-post.html">Single Post</a></li>
-									</ul> -->
 								</li>
-							</ul> <!-- end menu -->
+							</ul>
+							<!-- end menu -->
 							<div class="nav__phone nav__phone--mobile d-lg-none">
 								<span class="nav__phone-text">Call us:</span>
 								<a href="tel:1-800-995-3959" class="nav__phone-number">1-800-995-3959</a>
@@ -120,10 +92,14 @@
 
 							<div class="nav__socials nav__socials--mobile d-lg-none">
 								<div class="socials">
-									<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
-									<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-									<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-									<a href="#" class="social social-instagram" aria-label="instagram" title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+									<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
+										target="_blank"><i class="ui-twitter"></i></a>
+									<a href="#" class="social social-facebook" aria-label="facebook" title="facebook"
+										target="_blank"><i class="ui-facebook"></i></a>
+									<a href="#" class="social social-youtube" aria-label="youtube" title="google plus"
+										target="_blank"><i class="ui-youtube"></i></a>
+									<a href="#" class="social social-instagram" aria-label="instagram" title="instagram"
+										target="_blank"><i class="ui-instagram"></i></a>
 								</div>
 							</div>
 						</nav> <!-- end nav-wrap -->
@@ -135,10 +111,14 @@
 
 						<div class="nav__socials d-none d-lg-block">
 							<div class="socials">
-								<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
-								<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-								<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-								<a href="#" class="social social-instagram" aria-label="instagram" title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+								<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
+									target="_blank"><i class="ui-twitter"></i></a>
+								<a href="#" class="social social-facebook" aria-label="facebook" title="facebook"
+									target="_blank"><i class="ui-facebook"></i></a>
+								<a href="#" class="social social-youtube" aria-label="youtube" title="google plus"
+									target="_blank"><i class="ui-youtube"></i></a>
+								<a href="#" class="social social-instagram" aria-label="instagram" title="instagram"
+									target="_blank"><i class="ui-instagram"></i></a>
 							</div>
 						</div>
 
@@ -152,7 +132,8 @@
 		<div class="content-wrapper content-wrapper--boxed oh">
 
 			<!-- Page Title -->
-			<section class="page-title bg-dark-overlay text-center" style="background-image: url(img/page-title/services.jpg);">
+			<section class="page-title bg-dark-overlay text-center"
+				style="background-image: url(img/page-title/services.jpg);">
 				<div class="container">
 					<div class="page-title__holder">
 						<h1 class="page-title__title">Services</h1>
@@ -168,10 +149,13 @@
 						<div class="col-lg-10">
 							<div class="intro text-center">
 								<h2 class="mb-32">We turn ideas into works of art.</h2>
-								<p class="lead">For each project we establish relationships with partners who we know will help us create added value for your project.
-								As well as bringing together the public and private sectors, we make sector-overarching links to gather knowledge and to
-								learn from each other. The way we undertake projects is based on permanently applying values that reinforce each other: socio-cultural
-								value, experiental value, building-technical value and economical value.</p>
+								<p class="lead">For each project we establish relationships with partners who we know
+									will help us create added value for your project.
+									As well as bringing together the public and private sectors, we make
+									sector-overarching links to gather knowledge and to
+									learn from each other. The way we undertake projects is based on permanently
+									applying values that reinforce each other: socio-cultural
+									value, experiental value, building-technical value and economical value.</p>
 							</div>
 						</div>
 					</div>
@@ -190,7 +174,8 @@
 								</a>
 								<div class="service-1__info">
 									<h3 class="service-1__title">Planning</h3>
-									<p>We are a full service that offers design and build services for your entire project from initial sketches to the final construction.</p>
+									<p>We are a full service that offers design and build services for your entire
+										project from initial sketches to the final construction.</p>
 								</div>
 							</div>
 						</div>
@@ -201,7 +186,8 @@
 								</a>
 								<div class="service-1__info">
 									<h3 class="service-1__title">Interior Design</h3>
-									<p>We are a full service that offers design and build services for your entire project from initial sketches to the final construction.</p>
+									<p>We are a full service that offers design and build services for your entire
+										project from initial sketches to the final construction.</p>
 								</div>
 							</div>
 						</div>
@@ -212,7 +198,8 @@
 								</a>
 								<div class="service-1__info">
 									<h3 class="service-1__title">Exterior Design</h3>
-									<p>We are a full service that offers design and build services for your entire project from initial sketches to the final construction.</p>
+									<p>We are a full service that offers design and build services for your entire
+										project from initial sketches to the final construction.</p>
 								</div>
 							</div>
 						</div>
@@ -223,7 +210,8 @@
 								</a>
 								<div class="service-1__info">
 									<h3 class="service-1__title">Restoration</h3>
-									<p>We are a full service that offers design and build services for your entire project from initial sketches to the final construction.</p>
+									<p>We are a full service that offers design and build services for your entire
+										project from initial sketches to the final construction.</p>
 								</div>
 							</div>
 						</div>
@@ -234,7 +222,8 @@
 								</a>
 								<div class="service-1__info">
 									<h3 class="service-1__title">Building Design</h3>
-									<p>We are a full service that offers design and build services for your entire project from initial sketches to the final construction.</p>
+									<p>We are a full service that offers design and build services for your entire
+										project from initial sketches to the final construction.</p>
 								</div>
 							</div>
 						</div>
@@ -245,7 +234,8 @@
 								</a>
 								<div class="service-1__info">
 									<h3 class="service-1__title">Consultation</h3>
-									<p>We are a full service that offers design and build services for your entire project from initial sketches to the final construction.</p>
+									<p>We are a full service that offers design and build services for your entire
+										project from initial sketches to the final construction.</p>
 								</div>
 							</div>
 						</div>
@@ -261,28 +251,32 @@
 							<div class="process">
 								<i class="icon-Ruler-Tool process__icon"></i>
 								<h4 class="process__title">1. Schematic Design</h4>
-								<p class="process__text">For each project we establish relationships with partners who we know will help us.</p>
+								<p class="process__text">For each project we establish relationships with partners who
+									we know will help us.</p>
 							</div>
 						</div>
 						<div class="col-lg-3 col-md-6">
 							<div class="process">
 								<i class="icon-Book-Write process__icon"></i>
 								<h4 class="process__title">2. Construction Documents</h4>
-								<p class="process__text">For each project we establish relationships with partners who we know will help us.</p>
+								<p class="process__text">For each project we establish relationships with partners who
+									we know will help us.</p>
 							</div>
 						</div>
 						<div class="col-lg-3 col-md-6">
 							<div class="process">
 								<i class="icon-Truck-1 process__icon"></i>
 								<h4 class="process__title">3. Construction</h4>
-								<p class="process__text">For each project we establish relationships with partners who we know will help us.</p>
+								<p class="process__text">For each project we establish relationships with partners who
+									we know will help us.</p>
 							</div>
 						</div>
 						<div class="col-lg-3 col-md-6">
 							<div class="process">
 								<i class="icon-House-Key-3 process__icon"></i>
 								<h4 class="process__title">4. Project Completion</h4>
-								<p class="process__text">For each project we establish relationships with partners who we know will help us.</p>
+								<p class="process__text">For each project we establish relationships with partners who
+									we know will help us.</p>
 							</div>
 						</div>
 					</div>
@@ -313,7 +307,8 @@
 								<div class="widget widget-about-us">
 									<!-- Logo -->
 									<a href="index.html" class="logo-container flex-child">
-										<img class="logo" src="img/logo_white.png" srcset="img/logo_white.png 1x, img/logo_white@2x.png 2x" alt="logo">
+										<img class="logo" src="img/logo_white.png"
+											srcset="img/logo_white.png 1x, img/logo_white@2x.png 2x" alt="logo">
 									</a>
 								</div>
 							</div> <!-- end logo -->
@@ -342,10 +337,14 @@
 							<div class="col-lg-3 offset-lg-2 col-md-3">
 								<div class="widget">
 									<div class="socials">
-										<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
-										<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-										<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-										<a href="#" class="social social-instagram" aria-label="instagram" title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+										<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
+											target="_blank"><i class="ui-twitter"></i></a>
+										<a href="#" class="social social-facebook" aria-label="facebook"
+											title="facebook" target="_blank"><i class="ui-facebook"></i></a>
+										<a href="#" class="social social-youtube" aria-label="youtube"
+											title="google plus" target="_blank"><i class="ui-youtube"></i></a>
+										<a href="#" class="social social-instagram" aria-label="instagram"
+											title="instagram" target="_blank"><i class="ui-instagram"></i></a>
 									</div>
 								</div>
 							</div>
@@ -357,7 +356,7 @@
 				<div class="footer__bottom">
 					<div class="container-fluid text-right text-md-center">
 						<span class="copyright">
-							&copy; 2018 Sedona, Made by <a href="https://deothemes.com">DeoThemes</a>
+							© 2022 Royenix, Made by <a href="https://thedigibase.com">DigiBase</a>
 						</span>
 					</div>
 				</div> <!-- end footer bottom -->
@@ -378,4 +377,5 @@
 	<script src="js/scripts.js"></script>
 
 </body>
+
 </html>
