--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<title>Sedona | Contact</title>
+	<title>Royenix | Contact</title>
 
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
@@ -45,11 +46,13 @@
 						<div class="nav__header">
 							<!-- Logo -->
 							<a href="index.html" class="logo-container flex-child">
-								<img class="logo" src="img/logo.png" srcset="img/logo.png 1x, img/logo@2x.png 2x" alt="logo">
+								<img class="logo" src="img/logo.png" srcset="img/logo.png 1x, img/logo@2x.png 2x"
+									alt="logo">
 							</a>
 
 							<!-- Mobile toggle -->
-							<button type="button" class="nav__icon-toggle" id="nav__icon-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+							<button type="button" class="nav__icon-toggle" id="nav__icon-toggle" data-toggle="collapse"
+								data-target="#navbar-collapse">
 								<span class="sr-only">Toggle navigation</span>
 								<span class="nav__icon-toggle-bar"></span>
 								<span class="nav__icon-toggle-bar"></span>
@@ -60,59 +63,28 @@
 						<!-- Navbar -->
 						<nav id="navbar-collapse" class="nav__wrap collapse navbar-collapse">
 							<ul class="nav__menu">
-								<li class="nav__dropdown active">
-									<a href="index.html" aria-haspopup="true">Home</a>
-									<!-- <i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
-									<ul class="nav__dropdown-menu">
-										<li><a href="index.html">Home 1</a></li>
-										<li><a href="index-2.html">Home 2</a></li>
-										<li><a href="index-3.html">Home 3</a></li>
-										<li><a href="index-4.html">Home 4</a></li>
-									</ul> -->
+								<li>
+									<a href="./index.html" aria-haspopup="true">Home</a>
 								</li>
-								<li class="nav__dropdown">
+								<li>
 									<a href="./about.html" aria-haspopup="true">About Us</a>
-									<!-- <i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
-									<ul class="nav__dropdown-menu">
-										<li><a href="about.html">About</a></li>
-										<li><a href="services.html">Services</a></li>
-										<li><a href="single-service.html">Single Service</a></li>
-										<li><a href="contact.html">Contact</a></li>
-									</ul> -->
 								</li>
 								<li class="nav__dropdown">
-									<a href="#" aria-haspopup="true">Portfolio</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
+									<a href="#" aria-haspopup="true">Services</a>
+									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
+										aria-expanded="false"></i>
 									<ul class="nav__dropdown-menu">
-										<!-- <li><a href="about.html">About</a></li> -->
-										<li><a href="services.html">Services</a></li>
-										<li><a href="single-service.html">Single Service</a></li>
-										<!-- <li><a href="contact.html">Contact</a></li> -->
+										<li><a href="./portfolio.html">Portfolio</a></li>
+										<li><a href="./services.html">Services</a></li>
+										<li><a href="./single-service.html">Single Service</a></li>
+
 									</ul>
-									<!-- <ul class="nav__dropdown-menu">
-										<li><a href="portfolio.html">Portfolio</a></li>
-										<li><a href="portfolio-gallery.html">Portfolio Gallery</a></li>
-										<li><a href="portfolio-single.html">Portfolio Single</a></li>
-									</ul> -->
 								</li>
-								<!-- <li class="nav__dropdown">
-									<a href="#" aria-haspopup="true">Features</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
-									<ul class="nav__dropdown-menu">
-										<li><a href="icons.html">Icons</a></li>
-										<li><a href="elements.html">Elements</a></li>
-									</ul>
-								</li> -->
-								<li class="nav__dropdown">
+								<li class="active">
 									<a href="#" aria-haspopup="true">Contact Us</a>
-									<!-- <i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
-									<ul class="nav__dropdown-menu">
-										<li><a href="blog-masonry.html">Blog Masonry</a></li>
-										<li><a href="blog.html">Blog Standard</a></li>
-										<li><a href="single-post.html">Single Post</a></li>
-									</ul> -->
 								</li>
-							</ul> <!-- end menu -->
+							</ul>
+							<!-- end menu -->
 							<div class="nav__phone nav__phone--mobile d-lg-none">
 								<span class="nav__phone-text">Call us:</span>
 								<a href="tel:1-800-995-3959" class="nav__phone-number">1-800-995-3959</a>
@@ -120,10 +92,14 @@
 
 							<div class="nav__socials nav__socials--mobile d-lg-none">
 								<div class="socials">
-									<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
-									<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-									<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-									<a href="#" class="social social-instagram" aria-label="instagram" title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+									<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
+										target="_blank"><i class="ui-twitter"></i></a>
+									<a href="#" class="social social-facebook" aria-label="facebook" title="facebook"
+										target="_blank"><i class="ui-facebook"></i></a>
+									<a href="#" class="social social-youtube" aria-label="youtube" title="google plus"
+										target="_blank"><i class="ui-youtube"></i></a>
+									<a href="#" class="social social-instagram" aria-label="instagram" title="instagram"
+										target="_blank"><i class="ui-instagram"></i></a>
 								</div>
 							</div>
 						</nav> <!-- end nav-wrap -->
@@ -135,10 +111,14 @@
 
 						<div class="nav__socials d-none d-lg-block">
 							<div class="socials">
-								<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
-								<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-								<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-								<a href="#" class="social social-instagram" aria-label="instagram" title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+								<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
+									target="_blank"><i class="ui-twitter"></i></a>
+								<a href="#" class="social social-facebook" aria-label="facebook" title="facebook"
+									target="_blank"><i class="ui-facebook"></i></a>
+								<a href="#" class="social social-youtube" aria-label="youtube" title="google plus"
+									target="_blank"><i class="ui-youtube"></i></a>
+								<a href="#" class="social social-instagram" aria-label="instagram" title="instagram"
+									target="_blank"><i class="ui-instagram"></i></a>
 							</div>
 						</div>
 
@@ -152,7 +132,8 @@
 		<div class="content-wrapper content-wrapper--boxed oh">
 
 			<!-- Page Title -->
-			<section class="page-title bg-dark-overlay text-center" style="background-image: url(img/page-title/contact.jpg);">
+			<section class="page-title bg-dark-overlay text-center"
+				style="background-image: url(img/page-title/contact.jpg);">
 				<div class="container">
 					<div class="page-title__holder">
 						<h1 class="page-title__title">Contact</h1>
@@ -161,36 +142,41 @@
 			</section> <!-- end page title -->
 
 			<!-- Contact -->
-      <section class="section-wrap">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4">
-              <div class="contact">
+			<section class="section-wrap">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-4">
+							<div class="contact">
 								<h5 class="contact__title">Melbourne Office</h5>
-                <ul class="contact__items">
-                  <li class="contact__item">
+								<ul class="contact__items">
+									<li class="contact__item">
 										<span class="contact__item-label">Address:</span>
-                    <address>Melbourne's GPO 350 Bourke St.<br>Melbourne VIC 3000, Australia</address>
-                  </li>
-                  <li class="contact__item">
-                    <span class="contact__item-label">Phone: </span>
-                    <a href="tel:+1-800-1554-456-123">+ 1 (800) 155 4561</a>
-                  </li>
-                  <li class="contact__item">
-                    <span class="contact__item-label">Email: </span>
-                    <a href="mailto:themesupport@gmail.com">themesupport@gmail.com</a>
-                  </li>
+										<address>Melbourne's GPO 350 Bourke St.<br>Melbourne VIC 3000, Australia
+										</address>
+									</li>
+									<li class="contact__item">
+										<span class="contact__item-label">Phone: </span>
+										<a href="tel:+1-800-1554-456-123">+ 1 (800) 155 4561</a>
+									</li>
+									<li class="contact__item">
+										<span class="contact__item-label">Email: </span>
+										<a href="mailto:themesupport@gmail.com">themesupport@gmail.com</a>
+									</li>
 								</ul>
-								
+
 								<h5 class="contact__title mt-40">Follow Us</h5>
 								<div class="socials">
-									<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
-									<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-									<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-									<a href="#" class="social social-instagram" aria-label="instagram" title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+									<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
+										target="_blank"><i class="ui-twitter"></i></a>
+									<a href="#" class="social social-facebook" aria-label="facebook" title="facebook"
+										target="_blank"><i class="ui-facebook"></i></a>
+									<a href="#" class="social social-youtube" aria-label="youtube" title="google plus"
+										target="_blank"><i class="ui-youtube"></i></a>
+									<a href="#" class="social social-instagram" aria-label="instagram" title="instagram"
+										target="_blank"><i class="ui-instagram"></i></a>
 								</div>
 
-              </div>
+							</div>
 						</div>
 						<div class="col-lg-7 offset-lg-1">
 							<h2 class="section-title">Get a Free Quote</h2>
@@ -202,7 +188,8 @@
 									<div class="col-lg-6">
 										<!-- Name -->
 										<div class="material__form-group form-group">
-											<input type="text" name="name" id="name" class="form-input material__input" required="">
+											<input type="text" name="name" id="name" class="form-input material__input"
+												required="">
 											<label for="name" class="material__label">Name
 												<abbr title="required" class="required">*</abbr>
 											</label>
@@ -212,7 +199,8 @@
 									<div class="col-lg-6">
 										<!-- Email -->
 										<div class="material__form-group form-group">
-											<input type="email" name="email" id="email" class="form-input material__input" required="">
+											<input type="email" name="email" id="email"
+												class="form-input material__input" required="">
 											<label for="email" class="material__label">Email
 												<abbr title="required" class="required">*</abbr>
 											</label>
@@ -227,27 +215,29 @@
 									<label for="subject" class="material__label">Subject
 									</label>
 									<span class="material__underline"></span>
-								</div>							
+								</div>
 
 								<div class="material__form-group form-group">
-									<textarea id="message" name="message" rows="7" class="form-input material__input" required=""></textarea>
+									<textarea id="message" name="message" rows="7" class="form-input material__input"
+										required=""></textarea>
 									<label for="message" class="material__label">Message
 										<abbr title="required" class="required">*</abbr>
 									</label>
 									<span class="material__underline"></span>
-								</div>								
+								</div>
 
-								<input type="submit" class="btn btn--lg btn--color btn--button" value="Send Message" id="submit-message">
+								<input type="submit" class="btn btn--lg btn--color btn--button" value="Send Message"
+									id="submit-message">
 								<div id="msg" class="message"></div>
 							</form>
 						</div>
-          </div>
-        </div>
-      </section> <!-- end contact -->
+					</div>
+				</div>
+			</section> <!-- end contact -->
 
 
-      <!-- Google Map -->
-      <div id="google-map" class="gmap" data-address="V Tytana St, Manila, Philippines"></div>
+			<!-- Google Map -->
+			<div id="google-map" class="gmap" data-address="V Tytana St, Manila, Philippines"></div>
 
 
 			<!-- Footer -->
@@ -260,7 +250,8 @@
 								<div class="widget widget-about-us">
 									<!-- Logo -->
 									<a href="index.html" class="logo-container flex-child">
-										<img class="logo" src="img/logo_white.png" srcset="img/logo_white.png 1x, img/logo_white@2x.png 2x" alt="logo">
+										<img class="logo" src="img/logo_white.png"
+											srcset="img/logo_white.png 1x, img/logo_white@2x.png 2x" alt="logo">
 									</a>
 								</div>
 							</div> <!-- end logo -->
@@ -289,10 +280,14 @@
 							<div class="col-lg-3 offset-lg-2 col-md-3">
 								<div class="widget">
 									<div class="socials">
-										<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
-										<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-										<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-										<a href="#" class="social social-instagram" aria-label="instagram" title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+										<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
+											target="_blank"><i class="ui-twitter"></i></a>
+										<a href="#" class="social social-facebook" aria-label="facebook"
+											title="facebook" target="_blank"><i class="ui-facebook"></i></a>
+										<a href="#" class="social social-youtube" aria-label="youtube"
+											title="google plus" target="_blank"><i class="ui-youtube"></i></a>
+										<a href="#" class="social social-instagram" aria-label="instagram"
+											title="instagram" target="_blank"><i class="ui-instagram"></i></a>
 									</div>
 								</div>
 							</div>
@@ -304,7 +299,7 @@
 				<div class="footer__bottom">
 					<div class="container-fluid text-right text-md-center">
 						<span class="copyright">
-							&copy; 2018 Sedona, Made by <a href="https://deothemes.com">DeoThemes</a>
+							© 2022 Royenix, Made by <a href="https://thedigibase.com">DigiBase</a>
 						</span>
 					</div>
 				</div> <!-- end footer bottom -->
@@ -332,4 +327,5 @@
 	<script src="js/scripts.js"></script>
 
 </body>
+
 </html>
