--- a/index.html
+++ b/index.html
@@ -64,60 +64,28 @@
 						<!-- Navbar -->
 						<nav id="navbar-collapse" class="nav__wrap collapse navbar-collapse">
 							<ul class="nav__menu">
-								<li class="nav__dropdown active">
+								<li class="active">
 									<a href="index.html" aria-haspopup="true">Home</a>
-									<!-- <i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i> -->
-									<!-- <ul class="nav__dropdown-menu">
-										<li><a href="index.html">Home 1</a></li>
-										<li><a href="index-2.html">Home 2</a></li>
-										<li><a href="index-3.html">Home 3</a></li>
-										<li><a href="index-4.html">Home 4</a></li>
-									</ul> -->
 								</li>
-								<li class="nav__dropdown">
+								<li>
 									<a href="./about.html" aria-haspopup="true">About Us</a>
-									<!-- <i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i> -->
-									<!-- <ul class="nav__dropdown-menu">
-										<li><a href="about.html">About</a></li>
-										<li><a href="services.html">Services</a></li>
-										<li><a href="single-service.html">Single Service</a></li>
-										<li><a href="contact.html">Contact</a></li>
-									</ul> -->
 								</li>
 								<li class="nav__dropdown">
-									<a href="#" aria-haspopup="true">Portfolio</a>
+									<a href="#" aria-haspopup="true">Services</a>
 									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
 										aria-expanded="false"></i>
 									<ul class="nav__dropdown-menu">
-										<!-- <li><a href="about.html">About</a></li> -->
-										<li><a href="services.html">Services</a></li>
-										<li><a href="single-service.html">Single Service</a></li>
-										<!-- <li><a href="contact.html">Contact</a></li> -->
+										<li><a href="./portfolio.html">Portfolio</a></li>
+										<li><a href="./services.html">Services</a></li>
+										<li><a href="./single-service.html">Single Service</a></li>
+
 									</ul>
-									<!-- <ul class="nav__dropdown-menu">
-										<li><a href="portfolio.html">Portfolio</a></li>
-										<li><a href="portfolio-gallery.html">Portfolio Gallery</a></li>
-										<li><a href="portfolio-single.html">Portfolio Single</a></li>
-									</ul> -->
 								</li>
-								<!-- <li class="nav__dropdown">
-									<a href="#" aria-haspopup="true">Features</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
-									<ul class="nav__dropdown-menu">
-										<li><a href="icons.html">Icons</a></li>
-										<li><a href="elements.html">Elements</a></li>
-									</ul>
-								</li> -->
-								<li class="nav__dropdown">
+								<li>
 									<a href="./contact.html" aria-haspopup="true">Contact Us</a>
-									<!-- <i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i> -->
-									<!-- <ul class="nav__dropdown-menu">
-										<li><a href="blog-masonry.html">Blog Masonry</a></li>
-										<li><a href="blog.html">Blog Standard</a></li>
-										<li><a href="single-post.html">Single Post</a></li>
-									</ul> -->
 								</li>
-							</ul> <!-- end menu -->
+							</ul>
+							<!-- end menu -->
 
 							<!-- Mobile Search -->
 							<div class="nav__search-mobile d-lg-none">
@@ -169,7 +137,7 @@
 							</div>
 
 							<span class="copyright">
-								© 2022 Sedona, Made by <a href="https://deothemes.com">DeoThemes</a>
+								© 2022 Royenix, Made by <a href="https://thedigibase.com">DigiBase</a>
 							</span>
 						</div>
 
@@ -561,7 +529,7 @@
 							</div>
 							<div class="testimonial__info">
 								<span class="testimonial__author">Joeby Ragpa</span>
-								<span class="testimonial__company">DeoThemes</span>
+								<span class="testimonial__company">Royenixs</span>
 							</div>
 						</div>
 
@@ -572,7 +540,7 @@
 							</div>
 							<div class="testimonial__info">
 								<span class="testimonial__author">Alexander Samokhin</span>
-								<span class="testimonial__company">DeoThemes</span>
+								<span class="testimonial__company">Royenixs</span>
 							</div>
 						</div>
 
@@ -583,7 +551,7 @@
 							</div>
 							<div class="testimonial__info">
 								<span class="testimonial__author">Joeby Ragpa</span>
-								<span class="testimonial__company">DeoThemes</span>
+								<span class="testimonial__company">Royenixs</span>
 							</div>
 						</div>
 
@@ -594,7 +562,7 @@
 							</div>
 							<div class="testimonial__info">
 								<span class="testimonial__author">Alexander Samokhin</span>
-								<span class="testimonial__company">DeoThemes</span>
+								<span class="testimonial__company">Royenixs</span>
 							</div>
 						</div>
 
@@ -729,7 +697,7 @@
 				<div class="footer__bottom">
 					<div class="container-fluid text-right text-md-center">
 						<span class="copyright">
-							&copy; 2018 Sedona, Made by <a href="https://deothemes.com">DeoThemes</a>
+							© 2022 Royenix, Made by <a href="https://thedigibase.com">DigiBase</a>
 						</span>
 					</div>
 				</div> <!-- end footer bottom -->
