--- a/single-service.html
+++ b/single-service.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<title>Sedona | Single Service</title>
+	<title>Royenix | Single Service</title>
 
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
@@ -45,11 +46,13 @@
 						<div class="nav__header">
 							<!-- Logo -->
 							<a href="index.html" class="logo-container flex-child">
-								<img class="logo" src="img/logo.png" srcset="img/logo.png 1x, img/logo@2x.png 2x" alt="logo">
+								<img class="logo" src="img/logo.png" srcset="img/logo.png 1x, img/logo@2x.png 2x"
+									alt="logo">
 							</a>
 
 							<!-- Mobile toggle -->
-							<button type="button" class="nav__icon-toggle" id="nav__icon-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+							<button type="button" class="nav__icon-toggle" id="nav__icon-toggle" data-toggle="collapse"
+								data-target="#navbar-collapse">
 								<span class="sr-only">Toggle navigation</span>
 								<span class="nav__icon-toggle-bar"></span>
 								<span class="nav__icon-toggle-bar"></span>
@@ -60,51 +63,25 @@
 						<!-- Navbar -->
 						<nav id="navbar-collapse" class="nav__wrap collapse navbar-collapse">
 							<ul class="nav__menu">
-								<li class="nav__dropdown active">
+								<li>
 									<a href="index.html" aria-haspopup="true">Home</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
+								</li>
+								<li>
+									<a href="./about.html" aria-haspopup="true">About Us</a>
+								</li>
+								<li class="nav__dropdown active">
+									<a href="#" aria-haspopup="true">Services</a>
+									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
+										aria-expanded="false"></i>
 									<ul class="nav__dropdown-menu">
-										<li><a href="index.html">Home 1</a></li>
-										<li><a href="index-2.html">Home 2</a></li>
-										<li><a href="index-3.html">Home 3</a></li>
-										<li><a href="index-4.html">Home 4</a></li>
+										<li><a href="./portfolio.html">Portfolio</a></li>
+										<li><a href="./services.html">Services</a></li>
+										<li><a href="./single-service.html">Single Service</a></li>
+
 									</ul>
 								</li>
-								<li class="nav__dropdown">
-									<a href="#" aria-haspopup="true">Pages</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
-									<ul class="nav__dropdown-menu">
-										<li><a href="about.html">About</a></li>
-										<li><a href="services.html">Services</a></li>
-										<li><a href="single-service.html">Single Service</a></li>
-										<li><a href="contact.html">Contact</a></li>
-									</ul>
-								</li>
-								<li class="nav__dropdown">
-									<a href="#" aria-haspopup="true">Works</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
-									<ul class="nav__dropdown-menu">
-										<li><a href="portfolio.html">Portfolio</a></li>
-										<li><a href="portfolio-gallery.html">Portfolio Gallery</a></li>
-										<li><a href="portfolio-single.html">Portfolio Single</a></li>
-									</ul>
-								</li>
-								<li class="nav__dropdown">
-									<a href="#" aria-haspopup="true">Features</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
-									<ul class="nav__dropdown-menu">
-										<li><a href="icons.html">Icons</a></li>
-										<li><a href="elements.html">Elements</a></li>
-									</ul>
-								</li>
-								<li class="nav__dropdown">
-									<a href="blog.html" aria-haspopup="true">Blog</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false"></i>
-									<ul class="nav__dropdown-menu">
-										<li><a href="blog-masonry.html">Blog Masonry</a></li>
-										<li><a href="blog.html">Blog Standard</a></li>
-										<li><a href="single-post.html">Single Post</a></li>
-									</ul>
+								<li>
+									<a href="./contact.html" aria-haspopup="true">Contact Us</a>
 								</li>
 							</ul> <!-- end menu -->
 							<div class="nav__phone nav__phone--mobile d-lg-none">
@@ -114,10 +91,14 @@
 
 							<div class="nav__socials nav__socials--mobile d-lg-none">
 								<div class="socials">
-									<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
-									<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-									<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-									<a href="#" class="social social-instagram" aria-label="instagram" title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+									<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
+										target="_blank"><i class="ui-twitter"></i></a>
+									<a href="#" class="social social-facebook" aria-label="facebook" title="facebook"
+										target="_blank"><i class="ui-facebook"></i></a>
+									<a href="#" class="social social-youtube" aria-label="youtube" title="google plus"
+										target="_blank"><i class="ui-youtube"></i></a>
+									<a href="#" class="social social-instagram" aria-label="instagram" title="instagram"
+										target="_blank"><i class="ui-instagram"></i></a>
 								</div>
 							</div>
 						</nav> <!-- end nav-wrap -->
@@ -129,10 +110,14 @@
 
 						<div class="nav__socials d-none d-lg-block">
 							<div class="socials">
-								<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
-								<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-								<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-								<a href="#" class="social social-instagram" aria-label="instagram" title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+								<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
+									target="_blank"><i class="ui-twitter"></i></a>
+								<a href="#" class="social social-facebook" aria-label="facebook" title="facebook"
+									target="_blank"><i class="ui-facebook"></i></a>
+								<a href="#" class="social social-youtube" aria-label="youtube" title="google plus"
+									target="_blank"><i class="ui-youtube"></i></a>
+								<a href="#" class="social social-instagram" aria-label="instagram" title="instagram"
+									target="_blank"><i class="ui-instagram"></i></a>
 							</div>
 						</div>
 
@@ -146,7 +131,8 @@
 		<div class="content-wrapper content-wrapper--boxed oh">
 
 			<!-- Page Title -->
-			<section class="page-title bg-dark-overlay text-center" style="background-image: url(img/page-title/about.jpg);">
+			<section class="page-title bg-dark-overlay text-center"
+				style="background-image: url(img/page-title/about.jpg);">
 				<div class="container">
 					<div class="page-title__holder">
 						<h1 class="page-title__title">Single Service</h1>
@@ -163,41 +149,56 @@
 							<div class="col-lg-10">
 								<div class="entry__article">
 									<h3>Architectural Planning</h3>
-									<p>The architect usually begins to work when the site and the type and cost of a building have been determined. 
-									The site involves the varying behaviour of the natural environment that must be adjusted to the unvarying physical needs of human beings; the type is the generalized form established by society that must be adjusted to the special use for which the building is required; the cost implies the economics of land, labour, and materials that must be adjusted to suit a particular sum.force each other: socio-cultural value, experiental value, building-technical value and economical value.</p>
+									<p>The architect usually begins to work when the site and the type and cost of a
+										building have been determined.
+										The site involves the varying behaviour of the natural environment that must be
+										adjusted to the unvarying physical needs of human beings; the type is the
+										generalized form established by society that must be adjusted to the special use
+										for which the building is required; the cost implies the economics of land,
+										labour, and materials that must be adjusted to suit a particular sum.force each
+										other: socio-cultural value, experiental value, building-technical value and
+										economical value.</p>
 									<div class="gallery gallery-size-large">
 										<figure class="gallery-item">
 											<div class="gallery-icon landscape">
 												<img src="img/services/single/1.jpg" class="attachment-large size-large"
-												 alt="">
+													alt="">
 											</div>
 										</figure>
 										<figure class="gallery-item">
 											<div class="gallery-icon landscape">
 												<img src="img/services/single/2.jpg" class="attachment-large size-large"
-												 alt="">
+													alt="">
 											</div>
 										</figure>
 									</div>
-									<p>Thus, planning is the process of particularizing and, ultimately, of harmonizing the demands of environment, use, and economy.
-									This process has a cultural as well as a utilitarian value, for in creating a plan for any social activity the architect
-									inevitably influences the way in which that activity is performed.</p>
+									<p>Thus, planning is the process of particularizing and, ultimately, of harmonizing
+										the demands of environment, use, and economy.
+										This process has a cultural as well as a utilitarian value, for in creating a
+										plan for any social activity the architect
+										inevitably influences the way in which that activity is performed.</p>
 
 									<figure class="alignright">
 										<img src="img/services/single/3.jpg" alt="">
 									</figure>
 									<h3>Planning the environment</h3>
-									<p>The methods of controlling the environment considered here are only the practical aspects of planning. They are treated by
-									the architect within the context of the expressive aspects. The placement and form of buildings in relation to their sites,
-									the distribution of spaces within buildings, and other planning devices discussed below are fundamental elements in the aesthetics
-									of architecture.</p>
-									
+									<p>The methods of controlling the environment considered here are only the practical
+										aspects of planning. They are treated by
+										the architect within the context of the expressive aspects. The placement and
+										form of buildings in relation to their sites,
+										the distribution of spaces within buildings, and other planning devices
+										discussed below are fundamental elements in the aesthetics
+										of architecture.</p>
+
 									<h3>Orientation</h3>
-									<p>The arrangement of the axes of buildings and their parts is a device for controlling the effects of sun, wind, and rainfall.
-									The sun is regular in its course; it favours the southern and neglects the northern exposures of buildings in the Northern
-									Hemisphere, so that it may be captured for heat or evaded for coolness by turning the axis of a plan toward or away from
-									it.</p>
-									
+									<p>The arrangement of the axes of buildings and their parts is a device for
+										controlling the effects of sun, wind, and rainfall.
+										The sun is regular in its course; it favours the southern and neglects the
+										northern exposures of buildings in the Northern
+										Hemisphere, so that it may be captured for heat or evaded for coolness by
+										turning the axis of a plan toward or away from
+										it.</p>
+
 								</div>
 							</div>
 						</div>
@@ -229,7 +230,8 @@
 								<div class="widget widget-about-us">
 									<!-- Logo -->
 									<a href="index.html" class="logo-container flex-child">
-										<img class="logo" src="img/logo_white.png" srcset="img/logo_white.png 1x, img/logo_white@2x.png 2x" alt="logo">
+										<img class="logo" src="img/logo_white.png"
+											srcset="img/logo_white.png 1x, img/logo_white@2x.png 2x" alt="logo">
 									</a>
 								</div>
 							</div> <!-- end logo -->
@@ -258,10 +260,14 @@
 							<div class="col-lg-3 offset-lg-2 col-md-3">
 								<div class="widget">
 									<div class="socials">
-										<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
-										<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-										<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-										<a href="#" class="social social-instagram" aria-label="instagram" title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+										<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
+											target="_blank"><i class="ui-twitter"></i></a>
+										<a href="#" class="social social-facebook" aria-label="facebook"
+											title="facebook" target="_blank"><i class="ui-facebook"></i></a>
+										<a href="#" class="social social-youtube" aria-label="youtube"
+											title="google plus" target="_blank"><i class="ui-youtube"></i></a>
+										<a href="#" class="social social-instagram" aria-label="instagram"
+											title="instagram" target="_blank"><i class="ui-instagram"></i></a>
 									</div>
 								</div>
 							</div>
@@ -273,7 +279,7 @@
 				<div class="footer__bottom">
 					<div class="container-fluid text-right text-md-center">
 						<span class="copyright">
-							&copy; 2018 Sedona, Made by <a href="https://deothemes.com">DeoThemes</a>
+							© 2022 Royenix, Made by <a href="https://thedigibase.com">DigiBase</a>
 						</span>
 					</div>
 				</div> <!-- end footer bottom -->
@@ -294,4 +300,5 @@
 	<script src="js/scripts.js"></script>
 
 </body>
+
 </html>
